--- a/index.html
+++ b/index.html
@@ -1,62 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beatriz Maximiano - Portofolio</title>
 
-    <!--BOOTSTRAP ICONS--> 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!--BOOTSTRAP ICONS-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
 
     <!--CSS-->
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
+    <header id="header">
+      <!--Menu desktop-->
+      <!-- shit + alt + A -->
 
-    <header id="header"> 
-        <nav class="header-nav"> 
-            <!--class- especifica, mas é preciso escolher um nome -->
-            <ul> 
-                <li>home</li>
-                <li>projetos</li>
-                <li>sobre</li>
-                <li>contato</li>
+      <nav class="menu-desktop">
+        <!--class- especifica, mas é preciso escolher um nome -->
+        <ul class="menu menu-principal">
+          <li class="menu-item">
+            <a href="#home">
+                <span class="menu-texto"> home</span> </a>
+                <!--span - tag que serve para fazer pequenas formatações específicas-->
+          </li>
 
-            </ul>
-        </nav> 
+          <li class="menu-item">
+            <a href="#projetos"> 
+                <span class="menu-texto"> projetos</span> </a>
+          </li>
 
-        <div class="">
-             <i class="bi bi-sun"></i>
-        </div>
+          <li class="menu-item">
+            <a href="#sobre"> 
+                <span class="menu-texto">sobre</span> </a>
+          </li>
 
+          <li class="menu-item">
+            <a href="#contato"> 
+                <span class="menu-texto">contato</span> </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="">
+        <i class="bi bi-sun"></i>
+        <!--bi bi-sun - bootstrap icon-->
+      </div>
     </header>
     <!--cabeçalho-->
     <!--identar-SHIFT+ALT+F-->
 
     <!--MENU MOBILE-->
-    
-    <nav class="nav-mobile">
 
-    </nav>
-    
+    <nav class="menu-mobile"></nav>
+
     <!--PRINCIPAL-->
 
     <main>
-
-       <div>
-
-       </div>
-
+      <div></div>
     </main>
 
-    <section>
+    <section></section>
 
-    </section>
-
-    <footer>
-
-    </footer>
-
-</body>
+    <footer></footer>
+  </body>
 </html>
