--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" data-theme="dark"> <!--atributo js que atribui o tema dark para o site(banco de daos local)-->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,32 +24,33 @@
         <!--class- especifica, mas é preciso escolher um nome -->
         <ul class="menu menu-principal">
           <li class="menu-item">
-            <a href="#home">
+            <a href="#home" class="menu-link active"> <!--active - serve para deixar em realce a seleção selecionada no site -->
                 <span class="menu-texto"> home</span> </a>
                 <!--span - tag que serve para fazer pequenas formatações específicas-->
           </li>
 
           <li class="menu-item">
-            <a href="#projetos"> 
+            <a href="#projetos" class="menu-link"> 
                 <span class="menu-texto"> projetos</span> </a>
           </li>
 
           <li class="menu-item">
-            <a href="#sobre"> 
+            <a href="#sobre" class="menu-link"> 
                 <span class="menu-texto">sobre</span> </a>
           </li>
 
           <li class="menu-item">
-            <a href="#contato"> 
+            <a href="#contato" class="menu-link"> 
                 <span class="menu-texto">contato</span> </a>
           </li>
         </ul>
       </nav>
 
-      <div class="">
-        <i class="bi bi-sun"></i>
+      <div class="header-toggle">
+        <i id="toggleTheme" class="bi bi-sun"> </i>
         <!--bi bi-sun - bootstrap icon-->
       </div>
+
     </header>
     <!--cabeçalho-->
     <!--identar-SHIFT+ALT+F-->
@@ -66,6 +67,12 @@
 
     <section></section>
 
-    <footer></footer>
+    <footer>
+
+    </footer>
+
+    <script src="js/script.js"></script>
+
   </body>
+
 </html>
