--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       <!-- shit + alt + A -->
 
       <nav class="menu-desktop">
+        </nav>
+
+        <!--Logo-->
+
+        <div class="header-logo">
+            <a href="#home">
+                <img src="img/logo.png" alt="" class="logo">
+
+            </a>
+
+        </div>
         <!--class- especifica, mas é preciso escolher um nome -->
         <ul class="menu menu-principal">
           <li class="menu-item">
@@ -44,7 +55,6 @@
                 <span class="menu-texto">contato</span> </a>
           </li>
         </ul>
-      </nav>
 
       <div class="header-toggle">
         <i id="toggleTheme" class="bi bi-sun"> </i>
