--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!--MENU MOBILE-->
 
-    <nav  id="menuMobile" class=" menu menu menu-principal menu-mobile">
+    <nav  id="menuMobile" class=" menu menu-principal menu-mobile">
 
       <ul class="menu-lista">
 
@@ -105,12 +105,53 @@
     <!--PRINCIPAL-->
 
     <main>
-      <div>
+
+      <div class="main-content">
         
+        <h1>
+          <strong> Aprendizado dinâmico &</strong>
+          Aulas de inglês
+        </h1>
+
+        <p> 
+          Beatriz Maximiano, São Paulo- SP, Professora de inglês.
+        </p>
+
+        <ul class="menu menu-social">
+
+          <li>
+            <a href=""  class="menu-link" target="_blank"> <!--colocar links depois-->
+              <i class="bi bi-instagram"></i> 
+            </a>
+          </li>
+
+          <li>
+            <a href=""  class="menu-link" target="_blank"> <!--colocar links depois-->
+             <i class="bi bi-linkedin"></i>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://wa.me/5511962865057"  class="menu-link" target="_blank"> <!--colocar links depois-->
+             <i class="bi bi-whatsapp"></i>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://github.com/bemax31"  class="menu-link" target="_blank">
+              <i class="bi bi-github"></i>
+            </a>
+          </li>
+
+        </ul>
+
       </div>
+
     </main>
 
-    <section></section>
+    <section>
+
+    </section>
 
     <footer>
 
