--- a/index.html
+++ b/index.html
@@ -121,35 +121,51 @@
 
           <li>
             <a href=""  class="menu-link" target="_blank"> <!--colocar links depois-->
-              <i class="bi bi-instagram"></i> 
+              <i class="bi bi-instagram social-icon"></i> 
             </a>
           </li>
 
           <li>
             <a href=""  class="menu-link" target="_blank"> <!--colocar links depois-->
-             <i class="bi bi-linkedin"></i>
+             <i class="bi bi-linkedin social-icon"></i>
             </a>
           </li>
 
           <li>
             <a href="https://wa.me/5511962865057"  class="menu-link" target="_blank"> <!--colocar links depois-->
-             <i class="bi bi-whatsapp"></i>
+             <i class="bi bi-whatsapp social-icon"></i>
             </a>
           </li>
 
           <li>
             <a href="https://github.com/bemax31"  class="menu-link" target="_blank">
-              <i class="bi bi-github"></i>
+              <i class="bi bi-github social-icon"></i>
             </a>
           </li>
 
-        </ul>
+        </ul> <!--Fim menu social-->
 
+        <a href=" #projetos">
+          <button class="btn btn-primario">
+            <span> Ver projetos </span>  <!--mudar depois-->
+            <i class="bi bi-arrow-down-right"></i>
+          </button>
+        </a>
+
+      </div>
+      
+      <div class="video">
+        <iframe src="https://www.youtube.com/embed/6S2IPBIfxvE" title="Conheça a Metodologia CCAA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </div>
 
     </main>
 
-    <section>
+    <section class="conhecimento">
+      
+      <h2>
+        Conhecimento nas principais tecnologias do mercado.
+      </h2>
+
 
     </section>
 
