--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <!--PRINCIPAL-->
 
-    <main>
+    <main id="home">
 
       <div class="main-content">
         
@@ -126,7 +126,7 @@
           </li>
 
           <li>
-            <a href=""  class="menu-link" target="_blank"> <!--colocar links depois-->
+            <a href="www.linkedin.com/in/beatriz-m-431932237"  class="menu-link" target="_blank"> <!--colocar links depois-->
              <i class="bi bi-linkedin social-icon"></i>
             </a>
           </li>
@@ -176,5 +176,6 @@
     <script src="js/script.js"></script>
 
   </body>
+
 
 </html>
