--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <title>Beatriz Maximiano - Portofolio</title>
 
     <!--BOOTSTRAP ICONS-->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <!--CSS-->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
@@ -70,7 +67,7 @@
 
     <!--MENU MOBILE-->
 
-    <nav  id="menuMobile" class=" menu menu-principal menu-mobile">
+    <nav  id="menuMobile" class="menu menu-principal menu-mobile">
 
       <ul class="menu-lista">
 
@@ -179,3 +176,4 @@
 
 
 </html>
+
