--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-theme="dark"> <!--atributo js que atribui o tema dark para o site(banco de daos local)-->
+<html lang="pt-br" data-theme="dark"> <!--atributo js que atribui o tema dark para o site(banco de dados local)-->
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -170,7 +170,80 @@
     <!--Projetos-->
 
     <section id ="projetos" class="projetos">
+
       <h2>Projetos</h2>
+
+
+      <div class="projeto-container">
+
+        <!--Projeto / card 1-->
+        <article class="projeto-card">
+
+          <img src="img/projetos/englishclass.png" alt="" class="card-cover">
+
+          <div class="card-body">
+
+            <h3 class="card-tite">Aulas de inglês</h3>
+
+            <p class="card-description">Aulas personalizadas dedicadas aos mais diversos objetivos</p>
+
+             <!--<span> </span> pequenas palavras e frases-->
+             <ul class="card-lista">
+
+               <li class="card-item">
+                <i></i>
+                Professional/Business: para a rotina profissional
+               </li>
+
+               <li class="card-item">
+                <i> </i>
+                Certificações: TOEFL, IETLS e Cambridge
+               </li>
+
+               <li class="card-item">
+                 <i> </i>
+                 Pessoal: Pensando em sua satisfação pessoal, viagens etc...
+               </li>
+               
+             </ul>
+
+          </div>
+
+          <!--imagem 600 x 400-->
+
+        </article>
+
+        <!--Projeto / card 2-->
+        <article>
+
+          <img src="img/projetos/oldlady.jpg" alt="" class="card-cover">
+
+          <div class="card-body">
+
+          </div>
+
+
+        </article>
+
+        <!--Projeto / card 3-->
+        <article>
+
+          <img src="img/projetos/momandkids.jpg" alt="" class="card-cover">
+
+          <div class="card-body">
+
+          </div>
+
+
+        </article>
+
+
+
+      </div>
+
+      <!--Aside- menu, conteúdo lateral
+       Article- conteúdo independente posts, notícias-->
+
     </section>
 
     <footer>
