--- a/index.html
+++ b/index.html
@@ -183,29 +183,38 @@
 
           <div class="card-body">
 
-            <h3 class="card-tite">Aulas de inglês</h3>
+            <h3 class="card-tite">Aulas</h3>
 
-            <p class="card-description">Aulas personalizadas dedicadas aos mais diversos objetivos</p>
+            <p class="card-description">Personalizadas dedicadas aos mais diversos objetivos</p>
 
              <!--<span> </span> pequenas palavras e frases-->
              <ul class="card-lista">
 
                <li class="card-item">
-                <i></i>
+                <i class="bi bi-buildings"></i>
                 Professional/Business: para a rotina profissional
                </li>
 
                <li class="card-item">
-                <i> </i>
+                <i class="bi bi-award"></i>
                 Certificações: TOEFL, IETLS e Cambridge
                </li>
 
                <li class="card-item">
-                 <i> </i>
+                  <i class="bi bi-airplane"></i>
                  Pessoal: Pensando em sua satisfação pessoal, viagens etc...
                </li>
-               
+
              </ul>
+
+              <div class="card-button">
+
+            <button class="btn btn-primario">
+              <a href="https://preply.com/pt/online/professores--ingl%C3%AAs?campaignid=10769991341&network=g&adgroupid=111730490570&keyword=aulas%20particulares%20de%20ingles%20online&matchtype=e&creative=714769094793&targetid=kwd-302862272776&placement=&loc_physical_ms=9198796&device=c&adgroupintent=&utm_source=google&utm_medium=cpc&utm_term=aulas%20particulares%20de%20ingles%20online&utm_campaign=stu_sem_generic_web_0_por_br_multiplesub_ex&hsa_acc=3694996243&hsa_cam=10769991341&hsa_grp=111730490570&hsa_ad=714769094793&hsa_src=g&hsa_tgt=kwd-302862272776&hsa_kw=aulas%20particulares%20de%20ingles%20online&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=10769991341&gbraid=0AAAAADcbD23pVL5a6BaGcJIAxCnYkjlUW&gclid=Cj0KCQjw2IDFBhDCARIsABDKOJ48HQENM3Uj0DYgH2CFsYq27q6vYf-1xekXba3L1RrsvrvU8ln5MYQaAqh-EALw_wcB" target="_blank">   <!--Criar m outro site com depoimentos?-->
+                <span>Prévia</span>
+                <i class="bi bi-arrow-up-right"></i>
+              </a>
+            </button>
 
           </div>
 
@@ -214,26 +223,93 @@
         </article>
 
         <!--Projeto / card 2-->
-        <article>
+        <article class="projeto-card card-reverse">
 
           <img src="img/projetos/oldlady.jpg" alt="" class="card-cover">
 
           <div class="card-body">
 
-          </div>
+            <h3 class="card-tite">Materiais</h3>
 
+            <p class="card-description">Conteúdo inovador e criado excluivamente para cada aluno</p>
+
+             <!--<span> </span> pequenas palavras e frases-->
+             <ul class="card-lista">
+
+               <li class="card-item">
+                <i class="bi bi-calendar-date"></i>
+                Plano de estudos personalizado
+               </li>
+
+               <li class="card-item">
+                <i class="bi bi-journal-bookmark-fill"></i>
+                Exercícios individuais focados na pronúncia
+               </li>
+
+               <li class="card-item">
+                 <i class="bi bi-pc-display-horizontal"></i>
+                 Ferramentas interativas
+               </li>
+
+             </ul>
+
+             <div class="card-button">
+
+            <button class="btn btn-primario">
+              <a href="https://preply.com/pt/online/professores--ingl%C3%AAs?campaignid=10769991341&network=g&adgroupid=111730490570&keyword=aulas%20particulares%20de%20ingles%20online&matchtype=e&creative=714769094793&targetid=kwd-302862272776&placement=&loc_physical_ms=9198796&device=c&adgroupintent=&utm_source=google&utm_medium=cpc&utm_term=aulas%20particulares%20de%20ingles%20online&utm_campaign=stu_sem_generic_web_0_por_br_multiplesub_ex&hsa_acc=3694996243&hsa_cam=10769991341&hsa_grp=111730490570&hsa_ad=714769094793&hsa_src=g&hsa_tgt=kwd-302862272776&hsa_kw=aulas%20particulares%20de%20ingles%20online&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=10769991341&gbraid=0AAAAADcbD23pVL5a6BaGcJIAxCnYkjlUW&gclid=Cj0KCQjw2IDFBhDCARIsABDKOJ48HQENM3Uj0DYgH2CFsYq27q6vYf-1xekXba3L1RrsvrvU8ln5MYQaAqh-EALw_wcB" target="_blank">   <!--Criar m outro site com depoimentos?-->
+                <span>Prévia</span>
+                <i class="bi bi-arrow-up-right"></i>
+              </a>
+            </button>
+
+          </div>
 
         </article>
 
         <!--Projeto / card 3-->
-        <article>
+        <article class="projeto-card">
 
           <img src="img/projetos/momandkids.jpg" alt="" class="card-cover">
 
-          <div class="card-body">
+           <div class="card-body">
+
+            <h3 class="card-tite">Público infanto-juvenil</h3>
+
+            <p class="card-description"> Aqui também priorizamos o aprendizado do seu filho/a</p>
+
+             <!--<span> </span> pequenas palavras e frases-->
+             <ul class="card-lista">
+
+               <li class="card-item">
+                <i class="bi bi-apple-music"></i>
+                Experiências Culturais:Aprendendo o idioma de forma natural através de músicas, histórias, comidas, tradições e muito mais.
+               </li>
+
+               <li class="card-item">
+                <i class="bi bi-brush"></i>
+                Aulas dinâmicas e divertidas: materiais mais dinâmicos e interativos
+               </li>
+
+               <li class="card-item">
+                 <i class="bi bi-person-plus"></i>
+                 Habilidades socioemocionais: Promovemos aulas em grupo , estimulando o desenvolvimento de habilidades como colaboração, empatia e comunicação
+               </li>
+
+             </ul>
+
+              <div class="card-button">
+
+            <button class="btn btn-primario">
+              <a href="https://preply.com/pt/online/professores--ingl%C3%AAs?campaignid=10769991341&network=g&adgroupid=111730490570&keyword=aulas%20particulares%20de%20ingles%20online&matchtype=e&creative=714769094793&targetid=kwd-302862272776&placement=&loc_physical_ms=9198796&device=c&adgroupintent=&utm_source=google&utm_medium=cpc&utm_term=aulas%20particulares%20de%20ingles%20online&utm_campaign=stu_sem_generic_web_0_por_br_multiplesub_ex&hsa_acc=3694996243&hsa_cam=10769991341&hsa_grp=111730490570&hsa_ad=714769094793&hsa_src=g&hsa_tgt=kwd-302862272776&hsa_kw=aulas%20particulares%20de%20ingles%20online&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=10769991341&gbraid=0AAAAADcbD23pVL5a6BaGcJIAxCnYkjlUW&gclid=Cj0KCQjw2IDFBhDCARIsABDKOJ48HQENM3Uj0DYgH2CFsYq27q6vYf-1xekXba3L1RrsvrvU8ln5MYQaAqh-EALw_wcB" target="_blank">   <!--Criar m outro site com depoimentos?-->
+                <span>Prévia</span><!--criar uma nova página para cada prévia-->
+                <i class="bi bi-arrow-up-right"></i>
+              </a>
+            </button>
 
           </div>
 
+
+          </div>
 
         </article>
 
@@ -243,6 +319,15 @@
 
       <!--Aside- menu, conteúdo lateral
        Article- conteúdo independente posts, notícias-->
+
+    </section>
+
+
+    <!--SOBRE-->
+
+    <section id="sobre" class="sobre">
+
+      <h2>Sobre mim...</h2>
 
     </section>
 
