--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
       <div class="main-content">
 
         <h1>
-          <strong> Aprendizado dinâmico &</strong>
-          Aulas de inglês
+          <strong>  Aulas de inglês &</strong>
+          Aprendizado dinâmico
         </h1>
 
         <p>
@@ -123,13 +123,13 @@
           </li>
 
           <li>
-            <a href="www.linkedin.com/in/beatriz-m-431932237"  class="menu-link" target="_blank"> <!--colocar links depois-->
+            <a href="www.linkedin.com/in/beatriz-m-431932237"  class="menu-link" target="_blank">
              <i class="bi bi-linkedin social-icon"></i>
             </a>
           </li>
 
           <li>
-            <a href="https://wa.me/5511962865057"  class="menu-link" target="_blank"> <!--colocar links depois-->
+            <a href="https://wa.me/5511962865057"  class="menu-link" target="_blank">
              <i class="bi bi-whatsapp social-icon"></i>
             </a>
           </li>
@@ -279,7 +279,7 @@
 
             <h3 class="card-tite">Público infanto-juvenil</h3>
 
-            <p class="card-description"> Aqui também priorizamos o aprendizado do seu filho/a</p>
+            <p class="card-description"> Aqui também priorizo o aprendizado do seu filho/a</p>
 
              <!--<span> </span> pequenas palavras e frases-->
              <ul class="card-lista">
@@ -330,9 +330,43 @@
 
     <!--SOBRE-->
 
-    <section id="sobre" class="sobre">
+    <section id="sobre" class="sobre"><!--coteudo 1-->
 
-      <h2>Sobre mim...</h2>
+      <div class="sobre-content1">
+        <img src="img/sobremim/826510_32094-NYFMN5.jpg" alt="" class="sobre-logo">
+
+        <div class="sobre-description">
+
+           <h2>Sobre mim...</h2>
+
+           <p>Acredito que aprender inglês pode ser uma experiência dinâmica, prática e transformadora. Ofereço cursos para todas as idades e níveis, com metodologia moderna, com professora qualificada e foco na conversação desde a primeira aula. MEu objetivo é ajudar você a se comunicar com confiança no mundo globalizado. Venha aprender inglês de forma leve, eficiente e no seu ritmo!</p>
+
+           <div class="sobre-icones">
+            <i class="bi bi-award"></i>
+            <span>Certificado do TOEFL</span>
+
+           </div>
+
+           <div class="description-button">
+            <a href="www.linkedin.com/in/beatriz-m-431932237" target="_blank">
+
+              <button class="btn btn-primario">
+                <span>Conecte-se comigo</span>
+                <i class="bi bi-arrow-up-right"></i>
+              </button>
+            </a>
+
+           </div>
+
+        </div>
+
+
+      </div><!--fim conteudo1-->
+
+      <div class="sobre-content2"> <!--conteudo2-->
+
+      </div><!--conteudo2-->
+
 
     </section>
 
