--- a/index.html
+++ b/index.html
@@ -333,18 +333,17 @@
     <section id="sobre" class="sobre"><!--coteudo 1-->
 
       <div class="sobre-content1">
-        <img src="img/sobremim/826510_32094-NYFMN5.jpg" alt="" class="sobre-logo">
+        <img src="img/sobremim/avatar.png" alt="" class="sobre-logo">
 
         <div class="sobre-description">
 
            <h2>Sobre mim...</h2>
 
-           <p>Acredito que aprender inglês pode ser uma experiência dinâmica, prática e transformadora. Ofereço cursos para todas as idades e níveis, com metodologia moderna, com professora qualificada e foco na conversação desde a primeira aula. MEu objetivo é ajudar você a se comunicar com confiança no mundo globalizado. Venha aprender inglês de forma leve, eficiente e no seu ritmo!</p>
+           <p>Acredito que aprender inglês pode ser uma experiência dinâmica, prática e transformadora. Ofereço cursos para todas as idades e níveis, com metodologia moderna e foco na conversação desde a primeira aula. Meu objetivo é ajudar você a se comunicar com confiança no mundo globalizado. Venha aprender inglês de forma leve, eficiente e no seu ritmo!</p>
 
            <div class="sobre-icones">
-            <i class="bi bi-award"></i>
-            <span>Certificado do TOEFL</span>
-
+            <i class="bi bi-translate"></i>
+            <span> Inglês fluente</span>
            </div>
 
            <div class="description-button">
@@ -364,6 +363,26 @@
       </div><!--fim conteudo1-->
 
       <div class="sobre-content2"> <!--conteudo2-->
+
+        <!--coluna 1-->
+        <div class="col1">
+
+          <div class="row1">
+            <h3>Formação</h3>
+          </div><!--Fim da row 1-->
+
+          <div class="row2">
+            <h3>Experiências</h3>
+          </div> <!--Fim da row 2 -->
+
+        </div>
+
+         <!--coluna 2-->
+         <div class="col2">
+
+          <h3>Certificados</h3>
+
+         </div>
 
       </div><!--conteudo2-->
 
