--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
            <p>Acredito que aprender inglês pode ser uma experiência dinâmica, prática e transformadora. Ofereço cursos para todas as idades e níveis, com metodologia moderna e foco na conversação desde a primeira aula. Meu objetivo é ajudar você a se comunicar com confiança no mundo globalizado. Venha aprender inglês de forma leve, eficiente e no seu ritmo!</p>
 
            <div class="sobre-icones">
-            <i class="bi bi-translate"></i>
+            <i class="bi bi-globe"></i>
             <span> Inglês fluente</span>
            </div>
 
@@ -369,10 +369,39 @@
 
           <div class="row1">
             <h3>Formação</h3>
+
+            <h4>Análise e desenvovlimento de sistemas</h4>
+            <span>2023-2025</span>
+
+            <div class="sobre-icons">
+              <i class="bi bi-bank"></i>
+              <span>SENAC</span>
+            </div>
+
+
           </div><!--Fim da row 1-->
 
           <div class="row2">
             <h3>Experiências</h3>
+
+             <h4>Professora de inglês</h4>
+            <span>2020-2023</span>
+             <span>Elaborar e aplcar aulas para o público infanto juvenil</span>
+
+            <div class="sobre-icons">
+               <i class="bi bi-translate"></i>
+              <span>CCAA</span>
+            </div>
+
+            <h4>Auxilar administrativa</h4>
+            <span>2024-atualmente</span>
+            <span>Prestar suporte às áreas financeira e comercial, contribuindo para a rotina e tomada de decisões com o SAP e Power BI</span>
+
+            <div class="sobre-icons">
+              <i class="bi bi-person-workspace"></i>
+              <span>Focus Textil</span>
+
+            </div>
           </div> <!--Fim da row 2 -->
 
         </div>
@@ -381,6 +410,10 @@
          <div class="col2">
 
           <h3>Certificados</h3>
+
+          <div class="accordion">
+            
+          </div>
 
          </div>
 
