--- a/index.html
+++ b/index.html
@@ -412,7 +412,63 @@
           <h3>Certificados</h3>
 
           <div class="accordion">
-            
+
+            <!--curso 1-->
+            <div class="accordion-item active">
+
+              <button class="accordion-header start">
+
+                <span>Aspire Leaders Program</span>
+                <i class="bi bi-caret-down-fill"></i>
+
+              </button>
+
+              <div class="accordion-body end">
+                <p>Aspire Institute </p>
+                <p>Programa internacional de liderança para estudantes ao redor do mundo </p>
+              </div>
+
+            </div>
+
+
+            <!--curso 2-->
+            <div class="accordion-item">
+
+               <button class="accordion-header start">
+
+                <span>TOEFL</span>
+                <i class="bi bi-caret-down-fill"></i>
+
+              </button>
+
+              <div class="accordion-body end">
+                <p>ETS</p>
+                <p>Teste padronizado de língua inglesa acadêmica que avalia a proficiência de não falantes nativos de inglês norte-americano. </p>
+
+
+              </div>
+
+            </div>
+
+
+            <!--curso 3-->
+            <div class="accordion-item">
+
+               <button class="accordion-header start">
+
+                <span>IELTS </span>
+                <i class="bi bi-caret-down-fill"></i>
+
+              </button>
+
+              <div class="accordion-body end">
+                <p>British Council</p>
+                <p>Teste de proficiência em inglês britânico aceito globalmente por universidades, empresas e órgãos de imigração para comprovar a fluência no idioma</p>
+
+              </div>
+
+            </div> <!--fim accordion-->
+
           </div>
 
          </div>
