--- a/index.html
+++ b/index.html
@@ -558,6 +558,19 @@
 
     <footer>
 
+        <p> 
+            &copy;2025. Portfolio desenvolvido para fins educativos com base nas aulas do 
+            <a href="#" class="footer-link" target="_blank"> Senai Leopoldina - SP. 
+            </a>
+            
+            Desenvolvido por
+            <a href="https://github.com/guuhferiani" class="footer-link" target="_blank">
+                <i class="bi bi-github"></i>
+                Gustavo Feriani 
+            </a>
+        </p>
+
+
     </footer>
 
     <script src="js/script.js"></script>
@@ -566,4 +579,5 @@
 
 
 </html>
+
 
