--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             Desenvolvido por
             <a href="https://github.com/guuhferiani" class="footer-link" target="_blank">
                 <i class="bi bi-github"></i>
-                Gustavo Feriani 
+                Beatriz Maximiano 
             </a>
         </p>
 
@@ -579,5 +579,6 @@
 
 
 </html>
+
 
 
