--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
             </a>
             
             Desenvolvido por
-            <a href="https://github.com/guuhferiani" class="footer-link" target="_blank">
+            <a href="https://github.com/bemax31" class="footer-link" target="_blank">
                 <i class="bi bi-github"></i>
                 Beatriz Maximiano 
             </a>
@@ -579,6 +579,7 @@
 
 
 </html>
+
 
 
 
