--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!--BOOTSTRAP ICONS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
+
+
+
     <!--CSS-->
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -102,6 +105,14 @@
     <!--PRINCIPAL-->
 
     <main id="home">
+
+      <section id="carrousselBootstrap"
+      style=" margin:0; padding: 0; width: 100vw; position: relative; left:50% ; right:50%; margin-left: -50vw; margin-right: -50vw; ">
+           <iframe src="carousel.html" width="100%" height="500"
+
+           style=" border:none; display: block; margin: 0; padding:0; ">
+           </iframe>
+      </section>
 
       <div class="main-content">
 
@@ -576,6 +587,11 @@
     <button id ="btn-topo" title="Voltar ao topo">
         <i class="bi bi-arrow-up-short"></i>
     </button>
+
+
+<!--bootstrap JS-->
+
+
 
 
     <script src="js/script.js"></script>
